# dashbus

./: .clang-format  LICENSE  client.cpp  dBusClient.cpp  dBusClient.h  dBusConnection.cpp  dBusConnection.h  dBusCppError.cpp  dBusCppError.h  dBusMessage.cpp  dBusMessage.h  dBusServer.cpp  dBusServer.h  makefile  meson.build  post-gen.py  server.cpp  simple_receiver.cpp  simple_sender.cpp
examples/: client.cpp  server.cpp
include/: Concepts.h  Connection.h  Detail.h  Error.h  Exception.h  Message.h  ServerHandler.h  dBusCppConnection.h  dBusCppError.h  dBusCppException.h  dBusCppMessage.h  dBusCppServerHandler.h
source/: Connection.cpp  Error.cpp  Exception.cpp  Message.cpp  ServerHandler.cpp  dBusCppConnection.cpp  dBusCppError.cpp  dBusCppException.cpp  dBusCppMessage.cpp  dBusCppServerHandler.cpp  meson.build
subprojects/: doctest.wrap
tests/: Connection.test.cpp  Error.test.cpp  Message.test.cpp  ServerHandler.test.cpp  meson.build  test.cpp
